{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 234,
  "lineage": "f428186f-0f97-b62b-52b6-f3101412b376",
  "resources": [
    {
      "module": "module.aurora_postgresql_v2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:security-group/sg-0c74a666aabe03e61",
            "description": "Control traffic to/from RDS Aurora genai-bedrock-vector-store-stirred-gull",
            "egress": [],
            "id": "sg-0c74a666aabe03e61",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.5.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "genai-bedrock-vector-store-stirred-gull-20250708104557235100000006",
            "name_prefix": "genai-bedrock-vector-store-stirred-gull-",
            "owner_id": "054037138392",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-bedrock-vector-store-stirred-gull"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-bedrock-vector-store-stirred-gull"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora_postgresql_v2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.3.0/24",
              "10.0.4.0/24",
              "10.0.5.0/24"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3345816304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c74a666aabe03e61",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aurora_postgresql_v2.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:network-acl/acl-07f47e4a2a186c1ba",
            "default_network_acl_id": "acl-07f47e4a2a186c1ba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07f47e4a2a186c1ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "054037138392",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-02b81af3134aceff7",
              "subnet-04a2508a376b1eb57",
              "subnet-04c0352ea27298ad1",
              "subnet-07acbdc0bea4862b2",
              "subnet-091e98c4612f052fc",
              "subnet-0ca6a8f1408228d33",
              "subnet-0d613cb91e208d6f1",
              "subnet-0f5e74da585a4c57f",
              "subnet-0f7f4ca9eb90b158f"
            ],
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-default"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-default"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:route-table/rtb-0ec3d3d144f788806",
            "default_route_table_id": "rtb-0ec3d3d144f788806",
            "id": "rtb-0ec3d3d144f788806",
            "owner_id": "054037138392",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-default"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:security-group/sg-0a30964b357b515e3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a30964b357b515e3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "054037138392",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-default"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-default"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:internet-gateway/igw-0ebb0b6bc12c893ca",
            "id": "igw-0ebb0b6bc12c893ca",
            "owner_id": "054037138392",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ebb0b6bc12c893ca",
            "id": "r-rtb-068935ea408230d6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-068935ea408230d6d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:route-table/rtb-09718154c1a0a96a0",
            "id": "rtb-09718154c1a0a96a0",
            "owner_id": "054037138392",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1a"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:route-table/rtb-0a8323283aae149bd",
            "id": "rtb-0a8323283aae149bd",
            "owner_id": "054037138392",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1b"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:route-table/rtb-0b59ed3ea9404fbf4",
            "id": "rtb-0b59ed3ea9404fbf4",
            "owner_id": "054037138392",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1c"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:route-table/rtb-068935ea408230d6d",
            "id": "rtb-068935ea408230d6d",
            "owner_id": "054037138392",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebb0b6bc12c893ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f205661b586039a9",
            "region": "us-east-1",
            "route_table_id": "rtb-09718154c1a0a96a0",
            "subnet_id": "subnet-02b81af3134aceff7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b880e02f5ae287",
            "region": "us-east-1",
            "route_table_id": "rtb-0a8323283aae149bd",
            "subnet_id": "subnet-0f5e74da585a4c57f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03757d0725ca9e412",
            "region": "us-east-1",
            "route_table_id": "rtb-0b59ed3ea9404fbf4",
            "subnet_id": "subnet-0f7f4ca9eb90b158f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e99a4564862b0d",
            "region": "us-east-1",
            "route_table_id": "rtb-09718154c1a0a96a0",
            "subnet_id": "subnet-04c0352ea27298ad1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0117e781beefae181",
            "region": "us-east-1",
            "route_table_id": "rtb-0a8323283aae149bd",
            "subnet_id": "subnet-0d613cb91e208d6f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021b4dfa8e19bd9a5",
            "region": "us-east-1",
            "route_table_id": "rtb-0b59ed3ea9404fbf4",
            "subnet_id": "subnet-04a2508a376b1eb57"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc99bf369bcee78b",
            "region": "us-east-1",
            "route_table_id": "rtb-068935ea408230d6d",
            "subnet_id": "subnet-091e98c4612f052fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc460258f856c018",
            "region": "us-east-1",
            "route_table_id": "rtb-068935ea408230d6d",
            "subnet_id": "subnet-07acbdc0bea4862b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0090420ab8ac56e29",
            "region": "us-east-1",
            "route_table_id": "rtb-068935ea408230d6d",
            "subnet_id": "subnet-0ca6a8f1408228d33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-02b81af3134aceff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b81af3134aceff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-db-us-east-1a"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-db-us-east-1a"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-0f5e74da585a4c57f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5e74da585a4c57f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-db-us-east-1b"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-db-us-east-1b"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-0f7f4ca9eb90b158f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7f4ca9eb90b158f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-db-us-east-1c"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-db-us-east-1c"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-04c0352ea27298ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c0352ea27298ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1a"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1a"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-0d613cb91e208d6f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d613cb91e208d6f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1b"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1b"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-04a2508a376b1eb57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a2508a376b1eb57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1c"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-private-us-east-1c"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-091e98c4612f052fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091e98c4612f052fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public-us-east-1a"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public-us-east-1a"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-07acbdc0bea4862b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07acbdc0bea4862b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public-us-east-1b"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public-us-east-1b"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:subnet/subnet-0ca6a8f1408228d33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca6a8f1408228d33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037138392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public-us-east-1c"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull-public-us-east-1c"
            },
            "vpc_id": "vpc-06f4424bb80b29d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037138392:vpc/vpc-06f4424bb80b29d39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f47e4a2a186c1ba",
            "default_route_table_id": "rtb-0ec3d3d144f788806",
            "default_security_group_id": "sg-0a30964b357b515e3",
            "dhcp_options_id": "dopt-05e3e71198cda5d4b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f4424bb80b29d39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec3d3d144f788806",
            "owner_id": "054037138392",
            "region": "us-east-1",
            "tags": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull"
            },
            "tags_all": {
              "Application": "set-genai-aws-workshop",
              "Name": "genai-vpc-stirred-gull"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}